# ra

./: .gitignore  .ra.toml  Cargo.toml
crates/ra/: Cargo.toml
crates/ra-config/: Cargo.toml
crates/ra-config/src/: discovery.rs  error.rs  lib.rs  merge.rs  parse.rs  patterns.rs  resolve.rs  templates.rs  test_support.rs  validate.rs
crates/ra-config/templates/: config-global.toml  config.toml
crates/ra-config/tests/: integration.rs
crates/ra-context/: Cargo.toml
crates/ra-context/src/: analyze.rs  lib.rs  phrase.rs  query.rs  rank.rs  stopwords.rs  term.rs
crates/ra-context/src/keyword/: corpus_tfidf.rs  local.rs  mod.rs
crates/ra-context/src/parser/: markdown.rs  mod.rs  text.rs
crates/ra-document/: Cargo.toml
crates/ra-document/src/: build.rs  chunker.rs  error.rs  frontmatter.rs  id.rs  lib.rs  node.rs  parse.rs  slug.rs  tree.rs
crates/ra-highlight/: Cargo.toml
crates/ra-highlight/src/: lib.rs
crates/ra-index/: Cargo.toml
crates/ra-index/src/: aggregate.rs  analyzer.rs  config_hash.rs  context.rs  diff.rs  discovery.rs  document.rs  elbow.rs  error.rs  indexer.rs  lib.rs  location.rs  manifest.rs  query.rs  result.rs  schema.rs  search.rs  status.rs  writer.rs
crates/ra-index/src/query/: ast.rs  compile.rs  lexer.rs  mod.rs  parser.rs
crates/ra-index/src/search/: adaptive.rs  aggregate_api.rs  aggregation.rs  execute.rs  fuzzy.rs  hierarchy.rs  idf.rs  mlt.rs  mod.rs  normalize.rs  open.rs  params.rs  pipeline.rs  query.rs  ranges.rs  tests.rs  types.rs
crates/ra-query/: Cargo.toml
crates/ra-query/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/ra/src/: lib.rs  main.rs
crates/ra/src/cli/: args.rs  context.rs  mod.rs
crates/ra/src/cli/commands/: agents.rs  config.rs  context.rs  get.rs  init.rs  inspect.rs  likethis.rs  ls.rs  mod.rs  search.rs  shared.rs  status.rs  update.rs
crates/ra/src/cli/output/: mod.rs
crates/ra/templates/: config-global.toml  config.toml
crates/ra/tests/: cli.rs
design/: spec.md
docs/: chunking.md  config.md  context.md  markdown.md  overview.md  query.md  questions.md  search.md  slugs.md  spec.md
