[package]
name = "ra-config"
version = "0.1.0"
edition = "2024"
description = "Configuration system for ra research assistant"

[lints]
workspace = true

[dependencies]
directories = "6"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"

[dev-dependencies]
tempfile = "3.23.0"
