[package]
name = "ra-config"
version = "0.1.0"
edition = "2024"
description = "Configuration system for ra research assistant"

[lints]
workspace = true

[dependencies]
directories = "6"
globset = "0.4"
pathdiff = "0.2.3"
serde = { version = "1", features = ["derive"] }
serde_with = "3.16.1"
thiserror = "2"
toml = "0.9"

[dev-dependencies]
tempfile = "3.23.0"
