[package]
name = "ra-context"
version = "0.1.0"
edition = "2024"
description = "Context analysis for ra research assistant"

[dependencies]
keyword_extraction = { version = "1.5.0", features = ["rake", "text_rank", "yake"] }
ra-config = { path = "../ra-config" }
ra-document = { path = "../ra-document" }
ra-query = { path = "../ra-query" }
stop-words = "0.9.0"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
