[package]
name = "ra-highlight"
version = "0.1.0"
edition = "2024"
description = "Syntax highlighting and terminal colors for ra"

[lints]
workspace = true

[dependencies]
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
two-face = "0.4.4"
