[package]
name = "ra"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
ra-config = { path = "../ra-config" }
ra-document = { path = "../ra-document" }
ra-highlight = { path = "../ra-highlight" }
ra-index = { version = "0.1.0", path = "../ra-index" }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
