[package]
name = "ra"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "7.2.1"
ra-config = { path = "../ra-config" }
ra-context = { path = "../ra-context" }
ra-document = { path = "../ra-document" }
ra-highlight = { path = "../ra-highlight" }
ra-index = { version = "0.1.0", path = "../ra-index" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
serde_json = "1.0.145"
tempfile = "3.23.0"
